[package]
name = "based-num"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.41", features = ["derive"] }
csv = "1.3.1"
delegate = "0.13.4"
indicatif = "0.18.0"
serde = { version = "1.0.219", features = ["derive"] }
tinyvec = { version = "1.9.0", features = ["alloc", "rustc_1_55"] }
